# pyzmail

./: .gitignore  .travis.yml  Changelog.txt  MANIFEST.in  README.md  pyproject.toml  setup.cfg  setup.py
.github/workflows/: tests.yml
docs/source/: conf.py  index.rst
pyzmail/: __init__.py  generate.py  parse.py  utils.py
pyzmail/pyzmail/: generate.py  parse.py
pyzmail/scripts/: pyzinfomail.py  pyzsendmail.py
pyzmail/tests/: test_both.py  test_generate.py  test_parse.py  test_send.py  test_utils.py
scripts/: pyzinfomail
tests/: test_parse.py  test_utils.py
