[metadata]
name          = pyzmail
description   = Python easy mail library, to parse, compose and send emails

long_description = file:README.md
long_description_content_type = text/markdown

author        = Alain Spineux
author_email  = alain.spineux@gmail.com
url           = http://www.magiksys.net/pyzmail
license       = LGPL
license_file  = LICENSE.txt

classifiers =
	Intended Audience :: Developers
	License :: OSI Approved :: GNU Library or Lesser General Public License (LGPL)
	Programming Language :: Python :: 2
	Programming Language :: Python :: 2.7
	Programming Language :: Python :: 3
	Programming Language :: Python :: 3.4
	Programming Language :: Python :: 3.5
	Programming Language :: Python :: 3.6
	Programming Language :: Python :: 3.7
	Programming Language :: Python :: 3.8
	Programming Language :: Python :: 3.9
	Operating System :: OS Independent
	Topic :: Communications :: Email
	Topic :: System :: Networking
	Topic :: Internet
project_urls =
	Code = https://github.com/FelixSchwarz/htmlcompare
	Issue tracker = https://github.com/FelixSchwarz/htmlcompare/issues


[options]
python_requires = >= 2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*

packages = 
    pyzmail
    pyzmail.tests

scripts =
    scripts/pyzsendmail
    scripts/pyzinfomail

install_requires =
	six


[bdist_wheel]
universal = 1

